--- a/libs/ui/card/src/lib/card/card.component.html
+++ b/libs/ui/card/src/lib/card/card.component.html
@@ -1,4 +1,12 @@
-<section class="float-left card">
-	<img [src]="cardImage" width="200" height="320" [ngClass]="{jump: isJumping}"/>
+<!-- <div class="float-left card effects">
+	<img
+		[src]="cardImage"
+		width="200"
+		class="hvr-grow-shadow"
+		height="320"
+		[ngClass]="{ jump: isJumping }"
+	/>
 	<ng-content></ng-content>
-</section>
+</div> -->
+<!--
+		class="hvr-float-shadow"-->
