--- a/apps/dixit/src/app/dashboard/board/board-cards/board-cards.component.scss
+++ b/apps/dixit/src/app/dashboard/board/board-cards/board-cards.component.scss
@@ -1,39 +1,6 @@
-.at-item {
-  color: #3079ed;
-  animation-name: angry-animation;
-  animation-duration: 1.5s;
-  animation-timing-function: ease;
-  animation-delay: 0s;
-  animation-iteration-count: infinite;
-  animation-direction: normal;
-}
-@keyframes angry-animation {
-  0% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  20% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -webkit-transform: translateY(-30px);
-    transform: translateY(-30px);
-  }
-  50% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  60% {
-    -webkit-transform: translateY(-15px);
-    transform: translateY(-15px);
-  }
-  80% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
+.orange-border {
+  border-radius: 25px;
+  border: 2px solid #f89937;
+  height: 100%;
+  padding: 20px;
 }
