--- a/apps/dixit/src/app/dashboard/board/story/story.component.scss
+++ b/apps/dixit/src/app/dashboard/board/story/story.component.scss
@@ -1,7 +1,7 @@
 .story-title {
-  font-size: 22px;
   color: #002e50;
-  font-weight: 700;
+  font-family: "Segoe Script", cursive;
+  font-size: 50px;
 }
 .blue-border {
   border-radius: 25px;
