--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,6 +1,6 @@
 <gt-story></gt-story>
 <div class="row">
-	<section class="pt-3 col-sm-11  ml-sm-auto mr-sm-auto">
+	<div class="pt-3 col-sm-11  ml-sm-auto mr-sm-auto">
 		<gt-board-cards></gt-board-cards>
-	</section>
+	</div>
 </div>
