--- a/apps/dixit/src/app/dashboard/board/card/card.component.html
+++ b/apps/dixit/src/app/dashboard/board/card/card.component.html
@@ -3,7 +3,7 @@
 		<gt-avatar class="pb-1" [width]="80" [height]="80" [source]="card.owner.photoUrl">
 		</gt-avatar>
 	</ng-container>
-	<a class="shadow" [ngClass]="{ selected: isSelected && !disabled }">
+	<a class="shadow" [ngClass]="{ selected: isSelected }">
 		<img
 			[src]="cardImage"
 			width="200"
