--- a/apps/dixit/src/app/dashboard/player/hand/hand.component.html
+++ b/apps/dixit/src/app/dashboard/player/hand/hand.component.html
@@ -1,22 +1,27 @@
 <div class="row">
 	<section class="pt-3 col-sm-11  ml-sm-auto mr-sm-auto">
 		<div class="float-left card" *ngFor="let card of handCards$ | async">
-			<a
+			<div
 				class="shadow"
 				(click)="selectCard(card)"
 				[ngClass]="{ selected: selectedCardIndex === card }"
 			>
 				<img [src]="getCardImage(card)" width="200" height="320" />
-			</a>
+			</div>
 		</div>
 	</section>
 </div>
-<div class="row-fluid col-sm-9">
-	<gt-story-editor
-		[cardIndex]="selectedCardIndex"
-		[userPlayer]="userPlayer$ | async"
-	></gt-story-editor>
-	<!-- <button class="btn btn-info" (click)="setStory()">
-		Do you want to throw this card?  [ngClass]="{ selected: isSelected }"
-	</button> -->
-</div>
+<ng-container *ngIf="userPlayer$ | async as userPlayer">
+	<div class="row-fluid col-sm-9">
+		<gt-story-editor
+			*ngIf="userPlayer.isStoryTeller"
+			[cardIndex]="selectedCardIndex"
+			[userPlayer]="userPlayer"
+		></gt-story-editor>
+	</div>
+	<div class="row-fluid col-sm-9 pt-3" *ngIf="!userPlayer.isStoryTeller">
+		<button class="btn btn-info" (click)="throwCard(userPlayer)">
+			Do you want to throw this card?
+		</button>
+	</div>
+</ng-container>
