adding players on random order

--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,6 +1,9 @@
 <gt-story></gt-story>
 <div class="row">
-	<div class="pt-3 col-sm-11  ml-sm-auto mr-sm-auto">
+	<div class="col-sm-11 row justify-content-center">
 		<gt-board-cards></gt-board-cards>
+	</div>
+	<div class="col-sm-1">
+		<gt-players></gt-players>
 	</div>
 </div>
