--- a/apps/dixit/src/app/dashboard/player/card-selector/card-selector.component.html
+++ b/apps/dixit/src/app/dashboard/player/card-selector/card-selector.component.html
@@ -1,3 +1,4 @@
-<button class="btn btn-info" (click)="throwCard(userPlayer)" *ngIf="!hasBeenEmitted">
+<button class="btn btn-info" (click)="throwCard(userPlayer)">
 	{{ message }}
 </button>
+<!--*ngIf="!hasBeenEmitted"-->
