--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
@@ -1,14 +1,16 @@
 .welcome-container {
-	background-color: #f89937;
-	color: white;
-	min-height: 211px;
-	clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 49%, 0% 0%);
-	padding: 20px;
-	height: 100vh;
-	padding-right: 25%;
+  background-color: #f89937;
+  color: white;
+  min-height: 211px;
+  clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 49%, 0% 0%);
+  padding: 20px;
+  height: 100vh;
+  padding-right: 25%;
+  background-image: url("https://www.tercetocomunicacion.es/wp-content/uploads/2017/06/portada.jpg");
+  background-size: 93% 101%;
 }
 
 .brand-name {
-	font-weight: 400;
-	font-style: italic;
+  font-weight: 400;
+  font-style: italic;
 }
