adding spinner on login

--- a/apps/dixit/src/app/login/login/login.component.html
+++ b/apps/dixit/src/app/login/login/login.component.html
@@ -5,6 +5,7 @@
 			<gt-form-builder [entries]="entries" [isCancelButtonVisible]="false" [submitButtonText]="'Login'"
 				(submitted)="onSubmitted($event)">
 			</gt-form-builder>
+			<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
 		</div>
 	</div>
 </div>
