--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,6 +1,7 @@
 <gt-story></gt-story>
 <div class="row">
 	<div class="col-sm-11 row justify-content-center">
+		<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
 		<gt-board-cards></gt-board-cards>
 	</div>
 	<div class="col-sm-1">
