--- a/apps/dixit/src/app/dashboard/board/players/players.component.html
+++ b/apps/dixit/src/app/dashboard/board/players/players.component.html
@@ -1,5 +1,6 @@
 <ul>
 	<li *ngFor="let player of players$ | async" class="m-2">
 		<gt-avatar [width]="60" [height]="60" [source]="player.photoUrl"> </gt-avatar>
+		<span class="pl-3">{{ player.username }}</span>
 	</li>
 </ul>
