making player component work on real time

--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -5,7 +5,6 @@
 		<gt-board-cards></gt-board-cards>
 	</div>
 	<div class="col-sm-1">
-		<button (click)="seed()">boardCards</button>
-		<!-- <gt-players></gt-players> -->
+		<gt-players></gt-players>
 	</div>
 </div>
