--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,8 +1,12 @@
 <gt-story></gt-story>
-<div class="row">
-	<div class="col-sm-11 row justify-content-center">
-		<!-- <gt-spinner [isLoading]="isLoading$ | async"></gt-spinner> -->
-		<gt-board-cards></gt-board-cards>
+<div class="row justify-content-center">
+	<div class="col-sm-10">
+		<div class="col-sm-12">
+			<gt-board-cards></gt-board-cards>
+		</div>
+		<div class="row col-sm-12 justify-content-center">
+			<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
+		</div>
 	</div>
 	<div class="col-sm-1">
 		<gt-players></gt-players>
