fixing styles in progress

--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.html
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.html
@@ -6,7 +6,7 @@
 		<div class="p-2 align-self-center">
 			<gt-avatar [width]="500" [source]="banner.imageUrl"></gt-avatar>
 		</div>
-		<div class="p-2 mt-auto w-50">
+		<div class="message p-2 mt-auto w-50">
 			<h2>{{ banner.title }}</h2>
 			<span>{{ banner.contentText }}</span>
 		</div>
