--- a/apps/dixit/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
+++ b/apps/dixit/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
@@ -1,9 +1,17 @@
 <section class="d-flex">
-	<gt-side-bar [userData]="this.user$ | async" [linkOptions]="options" [isSidebarActive]="isSidebarActive"
-		(logOut)="onLogOut($event)"></gt-side-bar>
+	<gt-side-bar
+		[userData]="this.user$ | async"
+		[linkOptions]="options"
+		[isSidebarActive]="isSidebarActive"
+		(logOut)="onLogOut()"
+	></gt-side-bar>
 
 	<section id="#page-content-wrapper" class="flex-fill">
-		<gt-top-bar [userData]="this.user$ | async" [(isSidebarActive)]="isSidebarActive" (logOut)="onLogOut($event)">
+		<gt-top-bar
+			[userData]="this.user$ | async"
+			[(isSidebarActive)]="isSidebarActive"
+			(logOut)="onLogOut()"
+		>
 		</gt-top-bar>
 		<div class="container-fluid">
 			<router-outlet></router-outlet>
