--- a/apps/dixit/src/app/dashboard/board/players/players.component.html
+++ b/apps/dixit/src/app/dashboard/board/players/players.component.html
@@ -1,1 +1,2 @@
-<gt-avatars [avatars]="players$ | async"></gt-avatars>
+<span>{{ title }}</span
+><gt-avatars [avatars]="players$ | async"></gt-avatars>
