--- a/apps/dixit/src/app/dashboard/board/story/story.component.html
+++ b/apps/dixit/src/app/dashboard/board/story/story.component.html
@@ -1,4 +1,7 @@
-<div class="row col-sm-11 m-3 blue-border" *ngIf="currentStory$ | async as currentStory">
+<div
+	class="row col-sm-11 m-2 orange-border"
+	*ngIf="currentStory$ | async as currentStory"
+>
 	<div class="col-sm-1">
 		<gt-avatar
 			[width]="100"
