--- a/libs/ui/avatar/src/lib/avatars/avatars.component.html
+++ b/libs/ui/avatar/src/lib/avatars/avatars.component.html
@@ -1,5 +1,5 @@
 <ul>
-	<li *ngFor="let avatar of avatars" class="m-2">
+	<li *ngFor="let avatar of avatars" class="p-3">
 		<gt-avatar [width]="60" [height]="60" [source]="avatar.imageUrl"> </gt-avatar>
 		<span class="pl-3">{{ avatar.description }}</span>
 	</li>
