--- a/apps/dixit/src/app/dashboard/board/card/card.component.scss
+++ b/apps/dixit/src/app/dashboard/board/card/card.component.scss
@@ -1,3 +1,21 @@
+.shadow:hover {
+  margin: 0.4em;
+  padding: 1em;
+  cursor: pointer;
+  background: transparent;
+  text-decoration: none;
+  color: #666;
+}
+
+.selected {
+  margin: 0.4em;
+  padding: 1em;
+  cursor: pointer;
+  background: #e1e1e1;
+  text-decoration: none;
+  color: #666;
+}
+
 @keyframes jump {
   0% {
     transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
@@ -12,26 +30,4 @@
 .jump {
   transform-origin: 50% 50%;
   animation: jump 0.7s linear alternate infinite;
-}
-
-.shadow:hover {
-  margin: 0.4em;
-  padding: 1em;
-  cursor: pointer;
-  background: #e1e1e1;
-  text-decoration: none;
-  color: #666;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-font-smoothing: antialiased;
-}
-
-.selected {
-  margin: 0.4em;
-  padding: 1em;
-  cursor: pointer;
-  background: #e1e1e1;
-  text-decoration: none;
-  color: #666;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-font-smoothing: antialiased;
 }
