--- a/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
+++ b/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
@@ -1,9 +1,9 @@
 <div class="row col-sm-12 pt-2">
-	<div class="col-sm-2 blue-border pl-3 mr-3">
+	<div class="col-sm-2 orange-border pl-3 mr-3">
 		<div class="row">
 			<gt-players class="pull-right"></gt-players>
 		</div>
-		<div class="row col-sm-8">
+		<div class="col-sm-12 offset-md-2">
 			<button
 				class="btn btn-info"
 				(click)="startGame()"
@@ -13,12 +13,12 @@
 			</button>
 		</div>
 	</div>
-	<div class="col-sm-7 blue-border">
-		<div class="row align-items-center">
+	<div class="col-sm-7 ml-auto orange-border">
+		<div class="row align-items-center pl-3 pr-2">
 			<h1>{{ welcomeInfo.title }}</h1>
 			<span>{{ welcomeInfo.description }}</span>
 		</div>
-		<div class="row align-items-center">
+		<div class="col-sm-10 ml-sm-auto">
 			<img
 				class="img-fluid"
 				src="https://www.ultraboardgames.com/img/slideshow/dixit.jpg"
