--- a/apps/dixit/src/app/dashboard/player/hand/hand.component.scss
+++ b/apps/dixit/src/app/dashboard/player/hand/hand.component.scss
@@ -2,11 +2,9 @@
   margin: 0.4em;
   padding: 1em;
   cursor: pointer;
-  background: #e1e1e1;
+  background: transparent;
   text-decoration: none;
   color: #666;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-font-smoothing: antialiased;
 }
 
 .selected {
@@ -16,6 +14,8 @@
   background: #e1e1e1;
   text-decoration: none;
   color: #666;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-font-smoothing: antialiased;
+}
+.card {
+  padding: 20px;
+  border-style: none;
 }
