--- a/apps/dixit/src/app/dashboard/player/hand/hand.component.scss
+++ b/apps/dixit/src/app/dashboard/player/hand/hand.component.scss
@@ -1,10 +1,14 @@
-.shadow:hover {
+.shadow {
   margin: 0.4em;
   padding: 1em;
   cursor: pointer;
   background: transparent;
   text-decoration: none;
   color: #666;
+  &:hover {
+    transform: scale(1.04);
+    box-shadow: 0 3px 12px rgba(0, 0, 0, 0.23), 0 3px 12px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .selected {
