--- a/apps/dixit/src/styles.scss
+++ b/apps/dixit/src/styles.scss
@@ -7,6 +7,8 @@ body {
   height: 100%;
   padding: 20px;
   background-color: #fff;
+  box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.24), 0 1.5px 6px rgba(0, 0, 0, 0.12);
+  transition: all 0.2s cubic-bezier(0.3, 0.6, 0.2, 1.8);
 }
 .card {
   //padding: 20px;
