finishing styles for desktop

--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,5 +1,5 @@
 <gt-story></gt-story>
-<div class="row">
+<div class="row pt-2">
 	<div class="row col-md-10  justify-content-center orange-border ml-3">
 		<gt-board-cards></gt-board-cards>
 		<div class="row col-sm-12 col-sm-12 justify-content-center">
