--- a/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
+++ b/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
@@ -1,6 +1,6 @@
 <div class="row col-sm-12 pt-2">
 	<div class="col-sm-2 orange-border pl-3 mr-3">
-		<div class="row">
+		<div class="col-sm-9">
 			<gt-players class="pull-right"></gt-players>
 		</div>
 		<div class="col-sm-12 offset-md-2">
@@ -21,7 +21,7 @@
 		<div class="col-sm-10 ml-sm-auto">
 			<img
 				class="img-fluid"
-				src="https://www.ultraboardgames.com/img/slideshow/dixit.jpg"
+				src="http://www.edgeent.com/sisimg/public/images/dixit_web_h_n_sp_002.png"
 			/>
 		</div>
 	</div>
