finishing with fixing styles

--- a/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
+++ b/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
@@ -1,5 +1,17 @@
 <div class="row col-sm-12 pt-2">
-	<div class="col-sm-2 orange-border pl-3 mr-3">
+	<div class="col-sm-7 col-7 ml-auto orange-border">
+		<div class="row align-items-center pl-3 pr-2">
+			<h1>{{ welcomeInfo.title }}</h1>
+			<span>{{ welcomeInfo.description }}</span>
+		</div>
+		<div class="col-sm-10 ml-sm-auto">
+			<img
+				class="img-fluid"
+				src="http://www.edgeent.com/sisimg/public/images/dixit_web_h_n_sp_002.png"
+			/>
+		</div>
+	</div>
+	<div class="col-sm-2 col-4 orange-border pl-3 mr-3 pt-2">
 		<div class="col-sm-9">
 			<gt-players class="pull-right"></gt-players>
 		</div>
@@ -11,18 +23,6 @@
 			>
 				Start Game
 			</button>
-		</div>
-	</div>
-	<div class="col-sm-7 ml-auto orange-border">
-		<div class="row align-items-center pl-3 pr-2">
-			<h1>{{ welcomeInfo.title }}</h1>
-			<span>{{ welcomeInfo.description }}</span>
-		</div>
-		<div class="col-sm-10 ml-sm-auto">
-			<img
-				class="img-fluid"
-				src="http://www.edgeent.com/sisimg/public/images/dixit_web_h_n_sp_002.png"
-			/>
 		</div>
 	</div>
 </div>
