--- a/libs/ui/navigation/src/lib/side-bar/side-bar.component.scss
+++ b/libs/ui/navigation/src/lib/side-bar/side-bar.component.scss
@@ -33,3 +33,11 @@
     margin-left: -15rem;
   }
 }
+@media (max-width: 768px) {
+  #sidebar-wrapper {
+    width: 100px;
+  }
+  .list-group-item-action {
+    width: 100px;
+  }
+}
