--- a/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
+++ b/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
@@ -1,5 +1,5 @@
 <div class="row col-sm-12 pt-2">
-	<div class="col-sm-7 col-7 ml-auto orange-border">
+	<div class="col-sm-9 col-7 orange-border">
 		<div class="row align-items-center pl-3 pr-2">
 			<h1>{{ welcomeInfo.title }}</h1>
 			<span>{{ welcomeInfo.description }}</span>
@@ -11,11 +11,11 @@
 			/>
 		</div>
 	</div>
-	<div class="col-sm-2 col-4 orange-border pl-3 mr-3 pt-2">
+	<div class="col-sm-2 col-4  ml-auto orange-border pl-3  pt-2">
 		<div class="col-sm-9">
 			<gt-players class="pull-right"></gt-players>
 		</div>
-		<div class="col-sm-12 offset-md-2">
+		<div class="col-sm-12 offset-md-3">
 			<button
 				class="btn btn-info"
 				(click)="startGame()"
