--- a/apps/dixit/src/app/dashboard/player/story-editor/story-editor.component.html
+++ b/apps/dixit/src/app/dashboard/player/story-editor/story-editor.component.html
@@ -1,4 +1,5 @@
 <section class="orange-border">
+	<h5>You are the story teller. Select a card and assign it a title!</h5>
 	<gt-form-builder
 		class="m-4"
 		[entries]="entries"
