--- a/apps/dixit/src/app/dashboard/player/hand/hand.component.html
+++ b/apps/dixit/src/app/dashboard/player/hand/hand.component.html
@@ -15,12 +15,14 @@
 			></gt-card-selector>
 		</div>
 	</ng-container>
-	<div
-		class="card shadow"
-		*ngFor="let card of handCards$ | async"
-		(click)="selectCard(card)"
-		[ngClass]="{ selected: selectedCardIndex === card }"
-	>
-		<img [src]="getCardImage(card)" width="200" height="320" />
+	<div class="row col-sm-12 justify-content-center">
+		<div
+			class="card shadow"
+			*ngFor="let card of handCards$ | async"
+			(click)="selectCard(card)"
+			[ngClass]="{ selected: selectedCardIndex === card }"
+		>
+			<img [src]="getCardImage(card)" width="200" height="320" />
+		</div>
 	</div>
 </div>
