--- a/apps/dixit/src/app/dashboard/player/hand/hand.component.html
+++ b/apps/dixit/src/app/dashboard/player/hand/hand.component.html
@@ -16,6 +16,7 @@
 		</div>
 	</ng-container>
 	<div class="row col-sm-12 justify-content-center">
+		<!-- <button (click)="test()">Test</button> -->
 		<gt-spinner [isLoading]="isLoading"></gt-spinner>
 		<div
 			class="card shadow"
