--- a/apps/dixit/src/app/dashboard/player/card-selector/card-selector.component.html
+++ b/apps/dixit/src/app/dashboard/player/card-selector/card-selector.component.html
@@ -1,3 +1,7 @@
-<button class="btn btn-info" (click)="throwCard(userPlayer)">
+<button
+	class="btn btn-info"
+	(click)="throwCard(userPlayer)"
+	*ngIf="isPlayersTurn$ | async"
+>
 	{{ message }}
 </button>
