--- a/apps/dixit/src/app/dashboard/board/board-cards/board-cards.component.html
+++ b/apps/dixit/src/app/dashboard/board/board-cards/board-cards.component.html
@@ -1,15 +1,21 @@
-<gt-board-card
-	*ngFor="let boardCard of boardCards$ | async"
-	[boardCard]="boardCard"
-	[isRevealed]="isGuessingTime$ | async"
-	[isSelected]="boardCard.cardIndex === selectedCard?.cardIndex"
-	(click)="selectCard(boardCard)"
-	[isJumping]="(storyCard$ | async)?.cardIndex === boardCard.cardIndex"
->
-</gt-board-card>
+<div *ngIf="boardCards$ | async as boardCards; else loading">
+	<ng-container *ngIf="boardCards.length; else noItems">
+		<gt-board-card
+			*ngFor="let boardCard of boardCards"
+			[boardCard]="boardCard"
+			[isRevealed]="isGuessingTime$ | async"
+			[isSelected]="boardCard.cardIndex === selectedCard?.cardIndex"
+			(click)="selectCard(boardCard)"
+			[areVotesVisible]="areVotesVisible$ | async"
+			[isJumping]="isJumping(boardCard.cardIndex) | async"
+		>
+		</gt-board-card>
+	</ng-container>
+	<ng-template #noItems><span>No cards on the board yet!</span></ng-template>
+	<ng-template #loading> <gt-spinner [isLoading]="true"></gt-spinner></ng-template>
+</div>
 <div class="row col-sm-12">
-	<div class="row col-sm-11 pt-2" *ngIf="playerCanVote$ | async">
-		<gt-vote-editor [selectedCard]="selectedCard" [userPlayer]="userPlayer$ | async">
-		</gt-vote-editor>
+	<div class="col-sm-6 pt-2">
+		<gt-vote-editor [selectedCard]="selectedCard"> </gt-vote-editor>
 	</div>
 </div>
