--- a/apps/dixit/src/app/dashboard/board/vote-editor/vote-editor.component.html
+++ b/apps/dixit/src/app/dashboard/board/vote-editor/vote-editor.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-info" (click)="vote()">
+<button class="btn btn-info" (click)="vote()" *ngIf="isVisible$ | async">
 	{{ message }}
 </button>
