fixing sign out

--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
@@ -6,7 +6,7 @@
   padding: 20px;
   height: 100vh;
   padding-right: 25%;
-  background-image: url("https://www.tercetocomunicacion.es/wp-content/uploads/2017/06/portada.jpg");
+  background-image: url("/assets/cover.jpg");
   background-size: 93% 101%;
 }
 
