--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.html
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.html
@@ -3,7 +3,7 @@
 		<div class="p-2 mb-auto">
 			<span class="brand-name">{{ banner.upperText }}</span>
 		</div>
-		<div class="p-2 align-self-center">
+		<div class="p-2 align-self-center" *ngIf="banner.imageUrl">
 			<gt-avatar [width]="500" [source]="banner.imageUrl"></gt-avatar>
 		</div>
 		<div class="message mt-auto">
