cleaning start game

--- a/apps/dixit/src/app/dashboard/board/players/players.component.html
+++ b/apps/dixit/src/app/dashboard/board/players/players.component.html
@@ -1,2 +1,2 @@
-<span>{{ title }}</span
-><gt-avatars [avatars]="players$ | async"></gt-avatars>
+<h5>{{ title }}</h5>
+<gt-avatars [avatars]="players$ | async"></gt-avatars>
