--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,7 +1,7 @@
 <gt-story></gt-story>
 <div class="row pt-2">
 	<div class="row col-md-10  col-6 justify-content-center orange-border ml-2">
-		<div class="row col-sm-12 col-sm-12 justify-content-center">
+		<div class="row col-sm-12 justify-content-center">
 			<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
 		</div>
 		<gt-board-cards></gt-board-cards>
