--- a/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
+++ b/apps/dixit/src/app/dashboard/board/start-game/start-game.component.html
@@ -2,7 +2,7 @@
 	<gt-welcome-card class="col-sm-9 col-7" [message]="message"> </gt-welcome-card>
 	<div class="col-sm-2 col-4  ml-auto orange-border pl-3  pt-2">
 		<gt-players></gt-players>
-		<div class="center">
+		<div class="center-text">
 			<button
 				class="btn btn-info"
 				(click)="startGame()"
