--- a/apps/dixit/src/app/dashboard/player/hand/hand.component.html
+++ b/apps/dixit/src/app/dashboard/player/hand/hand.component.html
@@ -1,5 +1,5 @@
 <div
-	class="row orange-border m-2 col-sm-11  justify-content-center ml-sm-auto mr-sm-auto"
+	class="row orange-border m-auto col-sm-11  justify-content-center ml-sm-auto mr-sm-auto"
 >
 	<gt-quote
 		class="col-sm-12"
