--- a/libs/ui/login/src/lib/welcome-card/welcome-card.component.scss
+++ b/libs/ui/login/src/lib/welcome-card/welcome-card.component.scss
@@ -4,10 +4,15 @@ img {
 span {
   padding-top: 10px;
   font-family: monospace;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
-h2 {
+h4 {
+  font-family: monospace;
+  font-size: 700;
+}
+
+h1 {
   font-family: monospace;
 }
 .center {
