--- a/apps/dixit/src/app/dashboard/board/board-card/board-card.component.scss
+++ b/apps/dixit/src/app/dashboard/board/board-card/board-card.component.scss
@@ -3,3 +3,18 @@
   border-style: none;
   background: transparent;
 }
+span {
+  font-style: italic;
+  font-size: x-large;
+  color: #002e50;
+}
+hr {
+  height: 0px;
+  border: none;
+  border-top: 2px solid #f89937;
+}
+@media (min-width: 400px) {
+  hr {
+    display: none;
+  }
+}
