--- a/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
+++ b/apps/dixit/src/app/dashboard/board/table-board/table-board.component.html
@@ -1,12 +1,12 @@
 <gt-story></gt-story>
-<div class="row pt-2">
-	<div class="row col-md-10  col-6 justify-content-center orange-border ml-2">
-		<div class="row col-sm-12 justify-content-center">
+<div class="row m-auto pt-2">
+	<div class="col-sm-10  col-12  orange-border">
+		<div class="  justify-content-center">
 			<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
 		</div>
-		<gt-board-cards></gt-board-cards>
+		<gt-board-cards class="row justify-content-center"></gt-board-cards>
 	</div>
-	<div class="col-sm-1 mr-3 col-4 ml-auto orange-border">
+	<div class="col-sm-1 col-4 d-none d-sm-block ml-auto orange-border">
 		<gt-players></gt-players>
 	</div>
 </div>
