--- a/apps/dixit/src/app/login/login/login.component.html
+++ b/apps/dixit/src/app/login/login/login.component.html
@@ -1,11 +1,44 @@
 <div class="container-fluid">
 	<div class="row align-items-center">
-		<gt-welcome-banner [banner]="banner" class="col-sm-7 px-0"></gt-welcome-banner>
-		<div class="col-sm-3 offset-sm-1 login-container">
-			<gt-form-builder [entries]="entries" [isCancelButtonVisible]="false" [submitButtonText]="'Login'"
-				(submitted)="onSubmitted($event)">
-			</gt-form-builder>
-			<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
+		<gt-welcome-banner
+			[banner]="banner"
+			class="col-sm-6 px-0 d-none d-sm-block"
+		></gt-welcome-banner>
+		<div class="col-sm-4 offset-sm-1 col-11  ml-auto mr-auto login-container">
+			<ng-container *ngIf="isRestarting$ | async">
+				<span>Restarting match</span>
+				<gt-spinner [isLoading]="true"></gt-spinner>
+			</ng-container>
+			<ng-container *ngIf="isRestartVisible$ | async">
+				<span class="row col-sm-12"
+					>The game has already started. You can either restart it or wait for them to
+					finish.</span
+				>
+				<div class="row col-sm-12 justify-content-center">
+					<gt-avatar [width]="120" [height]="120" [source]="'assets/wait.png'">
+					</gt-avatar>
+				</div>
+				<div class="row col-sm-12 justify-content-center pt-3">
+					<button class="btn btn-warning" (click)="restartGame()">Restart</button>
+				</div>
+			</ng-container>
+			<ng-container *ngIf="isLoginVisible$ | async">
+				<h4>Welcome to Dixit online!</h4>
+				<gt-form-builder
+					[entries]="entries"
+					[isCancelButtonVisible]="false"
+					[submitButtonText]="'Login'"
+					(submitted)="onSubmitted($event)"
+				>
+					<div class="row-fluid pt-5">
+						<gt-avatar-selector
+							[avatars]="avatars$ | async"
+							(avatarChange)="onAvatarSelected($event)"
+						></gt-avatar-selector>
+					</div>
+				</gt-form-builder>
+				<gt-spinner [isLoading]="isLoading$ | async"></gt-spinner>
+			</ng-container>
 		</div>
 	</div>
 </div>
