--- a/libs/ui/avatar/src/lib/avatars/avatars.component.scss
+++ b/libs/ui/avatar/src/lib/avatars/avatars.component.scss
@@ -1,8 +1,35 @@
 ul {
   list-style-type: none;
-  text-align: center;
   padding: 0;
 }
+
 span {
   font-size: x-large;
+}
+
+.flex-container {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+.wrap {
+  flex-wrap: wrap;
+}
+
+.flex-item {
+  padding: 5px;
+  width: 240px;
+  line-height: 100px;
+  text-align: center;
+}
+
+@media (max-width: 400px) {
+  .flex-item {
+    width: 140px;
+  }
+  .flex-container {
+    justify-content: space-between;
+  }
 }
