--- a/libs/ui/forms/src/lib/form-builder/form-builder.component.html
+++ b/libs/ui/forms/src/lib/form-builder/form-builder.component.html
@@ -1,15 +1,31 @@
 <div class="form-fluid">
-  <form (ngSubmit)="onSubmit()" [formGroup]="form">
-    <section class="row">
-      <ng-container *ngFor="let entry of entries">
-        <gt-form-entry [entry]="entry" [form]="form" [class]="entry.col" [isSubmitted]="isSubmitted"></gt-form-entry>
-      </ng-container>
-    </section>
-    <div class="form-row pull-right">
-      <button type="button" class="btn btn-secondary mr-3" [hidden]="!isCancelButtonVisible">Cancelar</button>
-      <button type="submit" class="btn btn-primary" [disabled]="!(form.valid && form.dirty)">
-        {{submitButtonText}}
-      </button>
-    </div>
-  </form>
+	<form (ngSubmit)="onSubmit()" [formGroup]="form">
+		<section class="row">
+			<ng-container *ngFor="let entry of entries">
+				<gt-form-entry
+					[entry]="entry"
+					[form]="form"
+					[class]="entry.col"
+					[isSubmitted]="isSubmitted"
+				></gt-form-entry>
+			</ng-container>
+			<ng-content></ng-content>
+		</section>
+		<div class="form-row pull-right">
+			<button
+				type="button"
+				class="btn btn-secondary mr-3"
+				[hidden]="!isCancelButtonVisible"
+			>
+				Cancelar
+			</button>
+			<button
+				type="submit"
+				class="btn btn-primary"
+				[disabled]="!(form.valid && form.dirty)"
+			>
+				{{ submitButtonText }}
+			</button>
+		</div>
+	</form>
 </div>
