--- a/libs/ui/quote/src/lib/quote/quote.component.scss
+++ b/libs/ui/quote/src/lib/quote/quote.component.scss
@@ -3,3 +3,9 @@
   font-family: "Segoe Script", cursive;
   font-size: 50px;
 }
+
+@media (max-width: 400px) {
+  .story-title {
+    font-size: x-large;
+  }
+}
