--- a/apps/dixit/src/styles.scss
+++ b/apps/dixit/src/styles.scss
@@ -17,3 +17,14 @@ body {
 .center-text {
   text-align: center;
 }
+
+.btn {
+  color: #fff;
+}
+.btn-warning {
+  background-color: #f89937;
+  border-color: #f89937;
+}
+.btn-warning:hover {
+  background-color: #ffc08b;
+}
