--- a/apps/ressistance/src/app/dashboard/player/hand/hand.component.html
+++ b/apps/ressistance/src/app/dashboard/player/hand/hand.component.html
@@ -1,22 +1,10 @@
-<div
-	class="row orange-border m-auto col-sm-11  justify-content-center ml-sm-auto mr-sm-auto"
->
+<div class="row orange-border m-auto col-sm-11 ml-sm-auto mr-sm-auto">
+	<gt-view-spies></gt-view-spies>
 	<div class="row col-sm-12 justify-content-center">
-		<ng-container *ngIf="isPickingUpCards$ | async as isPickingUpCards; else complete">
-			<gt-spinner
-				[isLoading]="isPickingUpCards"
-				class="col-sm-12 col-12 center-text"
-			></gt-spinner>
+		<ng-container *ngIf="isPickingUpCards$ | async; else pickUpComplete">
+			<gt-spinner [isLoading]="true" class="col-sm-12 col-12 center-text"></gt-spinner>
 		</ng-container>
-		<ng-template #complete>
-			<div class="col-sm-12" *ngIf="ableToRevealSpies$ | async">
-				<button class="btn btn-warning" (click)="showSpies()">
-					Show Spies
-				</button>
-			</div>
-			<div class="col-sm-12" *ngIf="areSpiesVisible">
-				<gt-avatars [avatars]="spies" [isInLine]="true"></gt-avatars>
-			</div>
+		<ng-template #pickUpComplete>
 			<gt-card [isSpy]="isSpy$ | async"></gt-card>
 		</ng-template>
 	</div>
