--- a/apps/ressistance/src/app/dashboard/player/select-team/select-team.component.html
+++ b/apps/ressistance/src/app/dashboard/player/select-team/select-team.component.html
@@ -1,7 +1,7 @@
-<div class="col-sm-12 pt-5">
-	<h5>{{ title }}</h5>
+<div class="col-sm-12 orange-border" *ngIf="isTeamSelectable$ | async">
+	<h5>Select {{ membersRequired$ | async }} players for the mission!</h5>
 	<gt-avatars-selector
-		[avatars]="avatars"
+		[avatars]="avatars$ | async"
 		(selectionChange)="onSelectionChanged($event)"
 	></gt-avatars-selector>
 	<button class="btn btn-warning" (click)="setMembers()">Select team members</button>
