fixing mobile styles

--- a/apps/ressistance/src/app/dashboard/board/assignment-vote/assignment-vote.component.html
+++ b/apps/ressistance/src/app/dashboard/board/assignment-vote/assignment-vote.component.html
@@ -1,1 +1,6 @@
-<p>assignment-vote works!</p>
+<div class="card shadow">
+	<img src="assets/cards/support-en" width="200" height="320" />
+</div>
+<div class="card shadow">
+	<img src="assets/cards/reject-en" width="200" height="320" />
+</div>
