--- a/apps/ressistance/src/app/dashboard/board/mission/mission.component.html
+++ b/apps/ressistance/src/app/dashboard/board/mission/mission.component.html
@@ -7,6 +7,9 @@
 		<div class="col-sm-2 col-6 mission">
 			<span>Mission #{{ mission.id }}</span>
 		</div>
+		<div class="col-sm-12 col-12" *ngIf="mission.isApproved === null">
+			<button class="btn btn-warning" (click)="endDiscussion()">End discussion</button>
+		</div>
 	</div>
 	<hr />
 	<div class="row">
@@ -14,13 +17,21 @@
 			<p class="trim">Proposed members:</p>
 			<gt-avatars [isInLine]="true" [avatars]="mission.members"></gt-avatars>
 		</div>
-		<div class="col-sm-4 col-4 lateral-borders">
-			<p class="trim">Supporting assignment:</p>
-			<gt-avatars [isInLine]="true" [avatars]="mission.supportingAssignment"></gt-avatars>
-		</div>
-		<div class="col-sm-4 col-4">
-			<p class="trim">Rejecting assignment:</p>
-			<gt-avatars [isInLine]="true" [avatars]="mission.rejectingAssignment"></gt-avatars>
-		</div>
+		<ng-container *ngIf="!mission.isApproved">
+			<div class="col-sm-4 col-4 lateral-borders">
+				<p class="trim">Supporting assignment:</p>
+				<gt-avatars
+					[isInLine]="true"
+					[avatars]="mission.supportingAssignment"
+				></gt-avatars>
+			</div>
+			<div class="col-sm-4 col-4">
+				<p class="trim">Rejecting assignment:</p>
+				<gt-avatars
+					[isInLine]="true"
+					[avatars]="mission.rejectingAssignment"
+				></gt-avatars>
+			</div>
+		</ng-container>
 	</div>
 </ng-container>
