--- a/apps/ressistance/src/app/dashboard/player/assignment-vote/assignment-vote.component.html
+++ b/apps/ressistance/src/app/dashboard/player/assignment-vote/assignment-vote.component.html
@@ -1,4 +1,4 @@
-<div class="row col-sm-12">
-	<gt-card [card]="support" [isRevealed]="true"></gt-card>
-	<gt-card [card]="reject" [isRevealed]="true"></gt-card>
+<div class="row col-sm-12" *ngIf="canVote$ | async">
+	<gt-card [card]="supportCard" [isRevealed]="true" (click)="support()"></gt-card>
+	<gt-card [card]="rejectCard" [isRevealed]="true" (click)="reject()"></gt-card>
 </div>
