--- a/apps/fit-buddy/src/app/dashboard/recipes/recipes/recipes.component.html
+++ b/apps/fit-buddy/src/app/dashboard/recipes/recipes/recipes.component.html
@@ -1,1 +1,8 @@
-<p>recipes works!</p>
+<div class="row justify-content-center" *ngIf="recipes$ | async as recipes; else loading">
+	<div class="col-4" *ngFor="let recipe of recipes">
+		<gt-recipe-card [recipe]="recipe"></gt-recipe-card>
+	</div>
+	<ng-template #loading>
+		<gt-spinner [isLoading]="true"></gt-spinner>
+	</ng-template>
+</div>
